<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:weightSum="3">

    <TextView
        android:id="@+id/text_view_city_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/city_widget"
        android:textColor="@color/white"
        android:textSize="15sp"
        tools:text="CityName"
        tools:textColor="@color/black" />

    <TextView
        android:id="@+id/text_view_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/not_widget"
        android:textColor="@color/white"
        android:textSize="15sp"
        tools:text="ShotDescription"
        tools:textColor="@color/black" />

    <TextView
        android:id="@+id/text_view_temperature"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/found_widget"
        android:textColor="@color/white"
        android:textSize="15sp"
        tools:text="23"
        tools:textColor="@color/black" />

</LinearLayout>